<resources>
    <string name="app_name">Mini Music Reader</string>

    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="next_page">Next Page</string>
    <!--<string name="next_staff">NEXT STAFF</string>-->
    <!--<string name="save_staff">SAVE STAFF</string>-->
    <!--<string name="save_bar">SAVE BAR</string>-->
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>

    <string name="new_sheet_label">Create Sheet</string>
    <!--<string name="choose_file">CHOOSE FILE</string>-->
    <string name="sheet_name">Name</string>
    <string name="sheet_bpm">Tempo</string>
    <string name="sheet_bpb">Beats per measure</string>
    <string name="action_continue">Continue</string>
    <string name="error_required_field">This field is required</string>
    <!--<string name="error_non_zero">Must be non-zero</string>-->
    <!--<string name="error_not_int">Must be a whole number</string>-->
    <!--<string name="error_not_float">Must be a number</string>-->
    <!--<string name="error_no_uri">Please choose a file.</string>-->
    <!--<string name="error_non_unique_uri">This file has already been added.</string>-->

    <string name="scroll_helper">You can use two fingers to scroll</string>

    <string name="play_button">Play button</string>

    <string name="deleted_msg">Deleted</string>

    <!-- Partition Sheet Vocabulary -->
    <string name="untitled">Untitled</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="page">Page\u0020</string>
    <string name="page_of">\u0020of\u0020</string>
    <string name="default_page_number">1/</string>
    <string name="page_count">Page %1$d of %2$d</string>
    <string name="default_page_count">Page 0 of 0</string>
    <string name="beats_per_minute">Beats per minute</string>
    <string name="beats_per_measure">Beats per measure</string>
    <string name="begin_repeat">Begin repeat</string>
    <string name="end_repeat">End repeat</string>
    <string name="one">1</string>

    <!-- Menu Actions -->
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>

    <!-- Snackbar Actions -->
    <string name="undo">Undo</string>
</resources>
