<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewSheetActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/LayoutBodyStyle"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            >
            <EditText
                android:id="@+id/name_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sheet_name"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bpm_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            >
            <EditText
                android:id="@+id/bpm_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sheet_bpm"
                android:inputType="numberDecimal"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bpb_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            >
            <EditText
                android:id="@+id/bpb_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sheet_bpb"
                android:inputType="number"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
